# carddav-utils

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/carddav_utils/: __init__.py  __main__.py  _carddavclient.py  _client.py  _nextcloudclient.py  _nextcloudstorage.py  _profilepictureinfo.py  _storageobjects.py  _utils.py  _vcardinfo.py
src/carddav_utils/abm/: __init__.py  _config.py  _enricher.py  _merger.py
src/carddav_utils/ppc/: __init__.py  _base.py  _config.py  _directory.py  _injector.py  _ncupload.py  _signal.py  _telegram.py  _utils.py
