[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carddav_utils"
version = "0.0.1"
description = "Profile Picture Crawler"
readme = "README.rst"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Hinrich Mahler", email = "info@mahlerhome.de" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Sphinx :: Extension",
]
dependencies = [
    "aiorem ~= 0.0.2",
    "aiostream ~= 0.7.0",
    "httpx ~= 0.28.1",
    "kurigram ~= 2.2.12",
    "phonenumbers ~= 9.0.14",
    "pydantic ~= 2.11.7",
    "tgcrypto ~= 1.2.5",
    "typer ~= 0.19.2",
    "vobject ~= 0.9.9",
]

# See also https://github.com/pypa/hatch/issues/1230 for discussion
# the source distribution will include most of the files in the root directory
[tool.hatch.build.targets.sdist]
exclude = [".venv*", ".github"]
# the wheel will only include the src/carddav_utils package
[tool.hatch.build.targets.wheel]
packages = ["src/carddav_utils"]

# RUFF:
[tool.ruff]
line-length = 99
show-fixes = true

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = ["E", "F", "I", "PL", "UP", "RUF", "PTH", "C4", "B", "PIE", "SIM", "RET", "RSE",
    "G", "ISC", "PT", "ASYNC", "TCH", "SLOT", "PERF", "PYI", "FLY", "AIR", "RUF022",
    "RUF023", "Q", "INP", "W", "YTT", "DTZ", "ARG"]
ignore = ["ISC001", "DTZ011"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

# MYPY:
[tool.mypy]
warn_unused_ignores = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
show_error_codes = true
python_version = "3.13"
